correcion sobre el ingreso de datos del formulario

--- a/angelo/formulari.html
+++ b/angelo/formulari.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-    <form method="post" action="index.php">
+    <form method="POST" action="index.php">
         <div>
             <label>id</label><br>
             <input type="text" name="id">
@@ -26,7 +26,7 @@
         </div>
         <div>
             <label>password</label><br>
-            <input type="text" name="password">
+            <input type="password" name="password">
         </div>
         <div>
             <label>email</label><br>
@@ -34,7 +34,7 @@
         </div>
         <div>
             <label>active</label><br>
-            <input type="text" name="active">
+            <input type="checkbox" name="active">
         </div>
         <input type="submit" value="Submit">
      </form>
